--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
 		"**/.pnp.*": true
 	},
 	"typescript.tsdk": ".yarn/sdks/typescript/lib",
-	"typescript.enablePromptUseWorkspaceTsdk": true
+	"typescript.enablePromptUseWorkspaceTsdk": true,
+	"biome.lsp.bin": ".yarn/unplugged/@biomejs-cli-*.yarnpkg.com/biomejs-cli-*/dist/cli.js",
+	"[typescript][typescriptreact]": {
+		"editor.defaultFormatter": "biomejs.biome",
+		"editor.formatOnSave": true,
+		"editor.formatOnSaveMode": "modificationsIfAvailable"
+	}
 }
