Auto-format CSS and JSON

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
 	"typescript.tsdk": ".yarn/sdks/typescript/lib",
 	"typescript.enablePromptUseWorkspaceTsdk": true,
 	"biome.lsp.bin": ".yarn/unplugged/@biomejs-cli-*.yarnpkg.com/biomejs-cli-*/dist/cli.js",
-	"[typescript][typescriptreact]": {
+	"[typescript][typescriptreact][css][json]": {
 		"editor.defaultFormatter": "biomejs.biome",
 		"editor.formatOnSave": true,
 		"editor.formatOnSaveMode": "modificationsIfAvailable"
