--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,11 +16,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Enable Corepack
+      run: corepack enable
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
         cache: yarn
+
     - run: yarn install --immutable
     - run: yarn run biome ci
     - run: yarn run build
